--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
                 'images/img2.jpg',
                 'images/img3.jpg',
                 'images/img4.jpg',
-                'images/img5.jpg'
+                'images/img5.jpg',
+                'images/img6.jpg',
+                'images/img7.jpg'
             ];
         
             photoPaths.forEach(path => {
